--- a/src/flask_service/Dockerfile
+++ b/src/flask_service/Dockerfile
@@ -1,9 +1,4 @@
 FROM python:3-onbuild
 RUN pip install -r requirements.txt
-RUN apt-get update -y
-#RUN apt-get install -y \
-#  libcurl4-openssl-dev \
-#  tidy
-RUN apt-get install -y libcurlpp-dev libxml++2.6-dev
-
+#RUN apt-get update -y
 
